--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height">
     <title>Strony internetowe Kielce</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -17,12 +20,12 @@
                 <br>
                 Projektant stron internetowych.
             </h1>
-            <a class="contact">Stwórzmy razem nową jakość!</a>
-            <a class="show-portfolio">Zobacz moje portfolio</a>
+            <a class="contact link">Stwórzmy razem nową jakość!</a>
+            <a class="show-portfolio link">Zobacz moje portfolio</a>
         </section>
     </header>
     <main>
-        <section id="main-section-1">
+        <section id="what-im-doin">
             <h2>Co robię?</h2>
             <article>
                 <img class="graphic" src="architecture_black_24dp.svg" alt="Projektowanie loga">
@@ -49,8 +52,8 @@
                 "Wybierz pracę którą kochasz, i nie przepracujesz w życiu ani jednego dnia" myślę że cytat Konfucjusza bardzo dobrze pasuje do drogi którą przeszedłem.
             </p>
         </section>
-        <h2>Portfolio</h2>
         <section id="portfolio">
+            <h2>Portfolio</h2>
             <article id="labels">
                 <label for="img1">Strona sklepu</label>
                 <label for="img2">Strona fotografa</label>
@@ -73,6 +76,7 @@
                     <img src="pizzeria.PNG" alt="">
                 </a href="">
             </article>
+            <a class="contact link">Porozmawiajmy</a>
         </section>
     </main>
 </body>
