--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 Projektant stron internetowych.
             </h1>
             <a class="contact link">Stwórzmy razem nową jakość!</a>
-            <a class="show-portfolio link">Zobacz moje portfolio</a>
+            <a href="#portfolio" class="show-portfolio link">Zobacz moje portfolio</a>
         </section>
     </header>
     <main>
