--- a/index.html
+++ b/index.html
@@ -64,17 +64,17 @@
                 <input type="radio" name="images1" id="img2">
                 <input type="radio" name="images1" id="img3">
 
-                <a href="" id="slider1">
+                <a href="https://babelwebdeveloper.github.io/electronic-shop-web/" id="slider1" target="_blank">
                     <img src="headphones.PNG" alt="">
-                </a href="">
+                </a>
                 
-                <a href="" id="slider2">
+                <a href="https://babelwebdeveloper.github.io/photographer-website/" id="slider2" target="_blank">
                     <img src="photographer.PNG" alt="">
-                </a href="">
+                </a>
 
-                <a href="" id="slider3">
+                <a href="https://babelwebdeveloper.github.io/pizzeria-website/" id="slider3" target="_blank">
                     <img src="pizzeria.PNG" alt="">
-                </a href="">
+                </a>
             </article>
             <a class="contact link">Porozmawiajmy</a>
         </section>
